Fix issue not show output run command & add API Compiler Code
